--- a/lang/en.json
+++ b/lang/en.json
@@ -1,14 +1,59 @@
 {
+  "+tjnb0": {
+    "defaultMessage": "Currently a first-year Master's student, but above all, an average Typescript and Next.js enjoyer"
+  },
+  "/wRlFV": {
+    "defaultMessage": "My local time"
+  },
+  "1OtOj7": {
+    "defaultMessage": "Fullstack Developer"
+  },
   "49yjSD": {
-    "defaultMessage": "Contact Me",
-    "description": ""
+    "defaultMessage": "Contact Me"
   },
-  "GsBRWL": {
-    "defaultMessage": "Languages",
-    "description": ""
+  "8YQBol": {
+    "defaultMessage": "See project"
   },
-  "texterify_timestamp": {
-    "defaultMessage": "2024-10-13T14:56:38Z",
-    "description": ""
+  "8wZXrT": {
+    "defaultMessage": "Unranked"
+  },
+  "KSiUKj": {
+    "defaultMessage": "See GitHub"
+  },
+  "MTKFPh": {
+    "defaultMessage": "Fullstack developer"
+  },
+  "Or8X7d": {
+    "defaultMessage": "I also play League of Legends, by the way."
+  },
+  "PtLPn9": {
+    "defaultMessage": "Sorry, service not available"
+  },
+  "SeoZEM": {
+    "defaultMessage": "A piece of my simpler past..."
+  },
+  "UpwcFd": {
+    "defaultMessage": "Unavailable"
+  },
+  "Z3lYRx": {
+    "defaultMessage": "Also known as..."
+  },
+  "doDJyI": {
+    "defaultMessage": "Langages & Frameworks"
+  },
+  "g8Yp+m": {
+    "defaultMessage": "My heartfelt project"
+  },
+  "guWpQl": {
+    "defaultMessage": "A heartfelt project that recreates the world of my childhood. By creating this Minecraft clone, I wanted to bring one of my favorite games back to life and relive the memories of a simpler time."
+  },
+  "oVDe1D": {
+    "defaultMessage": "Contributions"
+  },
+  "tgvES0": {
+    "defaultMessage": "Now"
+  },
+  "z6QqQm": {
+    "defaultMessage": "Experiences"
   }
 }
