--- a/lang/en.json
+++ b/lang/en.json
@@ -7,6 +7,10 @@
     "defaultMessage": "Contact Me",
     "description": ""
   },
+  "5jeq8P": {
+    "defaultMessage": "Unknown",
+    "description": ""
+  },
   "8wZXrT": {
     "defaultMessage": "Unranked",
     "description": ""
@@ -15,8 +19,16 @@
     "defaultMessage": "See project",
     "description": ""
   },
+  "AtML1q": {
+    "defaultMessage": "Master",
+    "description": ""
+  },
   "doDJyI": {
     "defaultMessage": "Langages & Frameworks",
+    "description": ""
+  },
+  "FwkxsP": {
+    "defaultMessage": "Challenger",
     "description": ""
   },
   "g8Yp+m": {
@@ -31,8 +43,24 @@
     "defaultMessage": "A heartfelt project that recreates the world of my childhood. By creating this Minecraft clone, I wanted to bring one of my favorite games back to life and relive the memories of a simpler time.",
     "description": ""
   },
+  "GwqiOt": {
+    "defaultMessage": "Gold",
+    "description": ""
+  },
+  "HVNKt/": {
+    "defaultMessage": "Grand Master",
+    "description": ""
+  },
+  "j9vDBn": {
+    "defaultMessage": "Bronze",
+    "description": ""
+  },
   "KSiUKj": {
     "defaultMessage": "See GitHub",
+    "description": ""
+  },
+  "mHiv5V": {
+    "defaultMessage": "Platinum",
     "description": ""
   },
   "MTKFPh": {
@@ -45,6 +73,14 @@
   },
   "oVDe1D": {
     "defaultMessage": "Contributions",
+    "description": ""
+  },
+  "oWc8vJ": {
+    "defaultMessage": "Silver",
+    "description": ""
+  },
+  "rUaQTL": {
+    "defaultMessage": "Emerald",
     "description": ""
   },
   "SeoZEM": {
@@ -61,6 +97,10 @@
   },
   "UpwcFd": {
     "defaultMessage": "Unavailable",
+    "description": ""
+  },
+  "WJ8H5S": {
+    "defaultMessage": "Diamond",
     "description": ""
   },
   "/wRlFV": {
@@ -80,7 +120,7 @@
     "description": ""
   },
   "texterify_timestamp": {
-    "defaultMessage": "2024-10-15T22:54:18Z",
+    "defaultMessage": "2024-10-19T09:00:53Z",
     "description": ""
   }
 }
